--- a/my-vue-app1/package.json
+++ b/my-vue-app1/package.json
@@ -9,14 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "3.3.0-beta.4",
     "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.33",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.1.0",
+    "vite-plugin-restart": "^0.3.1",
     "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
